fix: decrease font size by one level on mobile screen

--- a/apps/mochi-web/styles/global.css
+++ b/apps/mochi-web/styles/global.css
@@ -124,7 +124,7 @@ ul.list-dashed {
 }
 
 ul.list-dashed > li {
-  @apply block relative text-xl;
+  @apply block relative text-base md:text-xl;
 }
 
 ul.list-dashed > li:not(:last-child) {
